k8s/simple-node-api/pod.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: node-api
  namespace: api
  labels:
    app: hello-one
spec:
  containers:
    - name: node-api
      image: lustepe/simple-node-api
      ports:
        - name: "http"
          containerPort: 8080
      resources:
          requests:
            cpu: 10m
            memory: 80M
          limits:
            cpu: 20m
            memory: 160M
