k8s/simple-node-api/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: node-api
  namespace: api
spec: # politicas de acesso ao pod
  type: ClusterIP
  selector:
    app: node-api
  ports:
    - protocol:  TCP
      port: 8085
      targetPort: "http"
